@@ -14,6 +14,15 @@ code and to keep track of all tags.
      * Please list in reverse chronological order (last date on top)
      ---------------------------------------------------------------
 
+28 January 2015 Tatsumi Koi (hadr-hpp-V10-00-06)
+---------------------------------------------------
+- Enable to read data file that has a signature of evaluation name.
+
+11 December 2014 Gabriele Cosmo
+---------------------------------------------------
+- Removed commented files in sources.cmake script to allow for proper
+  validation of sources in system testing.
+
 6 November 2014 Pedro Arce   (hadr-hpp-V10-00-05)
 ---------------------------------------------------
 - Code cleanup
